--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,6 +122,13 @@ img {
 }
 .menu__mobile {
   display: none;
+  height: 35px;
+  width: 40px;
+  background-color: transparent;
+  background: url(../img/icon_menu.svg) no-repeat;
+  background-size: cover;
+  border: none;
+  outline: none;
 }
 /* Block - phone */
 .phone {
