Исправил преимущества и паддинги у секции - проекты

--- a/src/less/media.less
+++ b/src/less/media.less
@@ -79,6 +79,9 @@
 
 		background: #fff;
 	}
+	.projects__header {
+		padding-left: 10px;
+	}
 	.price__inner {
 		padding-left: 100px;
 		padding-right: 100px;
@@ -142,7 +145,7 @@
 	}
 	.main-screen__arrow {
 		transform: rotate(90deg);
-		margin: 15px 0;
+		margin: 20px 0;
 	}
 
 	.stats__content {
@@ -184,6 +187,15 @@
 	.btn--header {
 		margin-left: auto;
 	}
+	
+	.adv__headline {
+		margin-bottom: 5px;
+	}
+
+	.adv__item {
+		width: 80%;
+		padding-left: 60px;
+	}
 
 	.stats__main-text {
 		font-size: 20px;
@@ -218,6 +230,7 @@
 		padding-left: 110px;
 	}
 	.faq__quest {
+		padding-right: 40px;
 		font-size: 20px;
 	}
 	
