--- a/src/css/media.css
+++ b/src/css/media.css
@@ -82,6 +82,9 @@
     z-index: 1;
     background: #fff;
   }
+  .projects__header {
+    padding-left: 10px;
+  }
   .price__inner {
     padding-left: 100px;
     padding-right: 100px;
@@ -140,7 +143,7 @@
     -webkit-transform: rotate(90deg);
         -ms-transform: rotate(90deg);
             transform: rotate(90deg);
-    margin: 15px 0;
+    margin: 20px 0;
   }
   .stats__content {
     padding: 50px 20px;
@@ -177,6 +180,13 @@
   .btn--header {
     margin-left: auto;
   }
+  .adv__headline {
+    margin-bottom: 5px;
+  }
+  .adv__item {
+    width: 80%;
+    padding-left: 60px;
+  }
   .stats__main-text {
     font-size: 20px;
   }
@@ -207,6 +217,7 @@
     padding-left: 110px;
   }
   .faq__quest {
+    padding-right: 40px;
     font-size: 20px;
   }
   .form {
