Исправил вспдывающие окна у стоимости

--- a/src/css/media.css
+++ b/src/css/media.css
@@ -89,6 +89,20 @@
     padding-left: 100px;
     padding-right: 100px;
   }
+  .price__descr {
+    top: 40px;
+    left: 0;
+    -webkit-transform: translate(-50%, 0);
+        -ms-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+  }
+  .price__descr:before {
+    top: -35px;
+    left: 205px;
+    -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
   .feedback {
     height: auto;
   }
