--- a/src/less/media.less
+++ b/src/less/media.less
@@ -86,6 +86,21 @@
 		padding-left: 100px;
 		padding-right: 100px;
 	}
+
+	.price__descr {
+		top: 40px;
+		left: 0;
+		transform: translate(-50%, 0);
+	}
+
+	.price__descr:before {
+		top: -35px;
+		left: 205px;
+
+		transform: rotate(90deg);
+
+	}
+
 	.feedback {
 		height: auto;
 	}
