--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,39 @@ img {
   color: #000;
   background-color: #eee;
 }
+.page__scroll {
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  display: none;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  background-color: #EBEBEB;
+  -webkit-transition: all 200ms;
+  -o-transition: all 200ms;
+  transition: all 200ms;
+}
+.page__scroll:hover {
+  cursor: pointer;
+  background: #E0B015;
+}
+.page__scroll:after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  content: "";
+  display: block;
+  width: 30px;
+  height: 20px;
+  background: url(../img/scroll_arrow.png) no-repeat;
+  background-size: 30px;
+}
 /* Block - input */
 .input {
   height: 30px;
@@ -113,6 +146,12 @@ img {
   padding: 0 15px;
   text-decoration: none;
   color: #000;
+  -webkit-transition: opacity 200ms;
+  -o-transition: opacity 200ms;
+  transition: opacity 200ms;
+}
+.menu__link:hover {
+  opacity: .5;
 }
 .menu__list .menu__item:first-child .menu__link {
   padding-left: 0;
