--- a/src/css/media.css
+++ b/src/css/media.css
@@ -34,6 +34,9 @@
   .stats__content {
     padding: 50px 100px;
   }
+  .projects__header {
+    padding-left: 10px;
+  }
   .projects__examples {
     -ms-flex-pack: distribute;
         justify-content: space-around;
@@ -81,9 +84,6 @@
     height: auto;
     z-index: 1;
     background: #fff;
-  }
-  .projects__header {
-    padding-left: 10px;
   }
   .price__inner {
     padding-left: 100px;
@@ -239,5 +239,13 @@
   }
   .form__btn {
     margin-top: 20px;
+  }
+  .modal {
+    width: 100vw;
+    overflow-x: hidden;
+  }
+  .modal__form {
+    width: 95vw;
+    padding: 40px 30px;
   }
 }
