--- a/src/less/media.less
+++ b/src/less/media.less
@@ -32,6 +32,10 @@
 	.stats__content {
 		padding: 50px 100px;
 	}
+
+	.projects__header {
+		padding-left: 10px;
+	}
 	.projects__examples {
 		justify-content: space-around;
 	}
@@ -78,9 +82,6 @@
 		z-index: 1;
 
 		background: #fff;
-	}
-	.projects__header {
-		padding-left: 10px;
 	}
 	.price__inner {
 		padding-left: 100px;
@@ -255,5 +256,14 @@
 
 	.form__btn {
 		margin-top: 20px;
+	}
+	
+	.modal {
+		width: 100vw;
+		overflow-x: hidden;
+	}
+	.modal__form {
+		width: 95vw;
+		padding: 40px 30px;
 	}
 }
