--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,7 @@ img {
   margin: -1px;
 }
 .page {
+  position: relative;
   padding: 0;
   margin: 0;
   font-family: "Roboto", Arial, sans-serif;
@@ -27,8 +28,8 @@ img {
 }
 .page__scroll {
   position: fixed;
-  bottom: 40px;
-  right: 40px;
+  bottom: 20px;
+  right: 20px;
   display: none;
   width: 50px;
   height: 50px;
@@ -58,6 +59,41 @@ img {
   background: url(../img/scroll_arrow.png) no-repeat;
   background-size: 30px;
 }
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow-y: auto;
+}
+.modal__form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  padding: 80px 50px;
+  background-color: #fff;
+}
+.modal__close {
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  width: 18px;
+  height: 18px;
+  border: none;
+  background: url(../img/icons_sprite.png) no-repeat;
+  background-position: -75px -1px;
+}
+.modal__close:hover {
+  opacity: .9;
+  cursor: pointer;
+}
 /* Block - input */
 .input {
   height: 30px;
@@ -71,6 +107,9 @@ img {
 }
 .input:focus {
   border-bottom-color: #828283;
+}
+.input--modal {
+  color: gray;
 }
 /* Block - btn */
 .btn {
@@ -929,6 +968,9 @@ img {
   display: block;
   color: #b35d5d;
   font-size: 14px;
+}
+.form__field--modal {
+  color: gray;
 }
 .form__name {
   position: absolute;
