--- a/src/css/media.css
+++ b/src/css/media.css
@@ -249,3 +249,10 @@
     padding: 40px 30px;
   }
 }
+@media screen and (min-width: 991px) {
+  .menu__list {
+    display: -webkit-box!important;
+    display: -ms-flexbox!important;
+    display: flex!important;
+  }
+}
