--- a/src/css/style.css
+++ b/src/css/style.css
@@ -94,6 +94,21 @@ img {
   opacity: .9;
   cursor: pointer;
 }
+.modal__success {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 600px;
+  height: 300px;
+  background-color: #fff;
+  padding: 20px;
+  text-align: center;
+  opacity: 0;
+  z-index: -1;
+}
 /* Block - input */
 .input {
   height: 30px;
@@ -144,6 +159,9 @@ img {
   margin: 0;
   font-size: 38px;
   line-height: 0.63;
+}
+.headline--success {
+  font-size: 20px;
 }
 /* Block - header */
 .header {
@@ -757,6 +775,7 @@ img {
   padding-right: 50px;
   padding-bottom: 130px;
   line-height: 24px;
+  overflow-x: hidden;
 }
 .feed-item--steps {
   background-color: #fff;
@@ -785,11 +804,11 @@ img {
 }
 .feed-item__slider {
   position: relative;
-  height: 100%;
+  height: 200px;
 }
 .feed-item__arrow {
   position: absolute;
-  bottom: -7px;
+  bottom: -130px;
   width: 87px;
   height: 82px;
   background-color: #ebebeb;
