--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1006,7 +1006,7 @@ img {
   cursor: text;
 }
 .form__name--error {
-  color: #aa5a5b;
+  color: #aa5a5b!important;
 }
 .form__name--active {
   top: -15px;
