--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,6 +109,10 @@ img {
   opacity: 0;
   z-index: -1;
 }
+.modal__success--opened {
+  opacity: 1;
+  z-index: 999;
+}
 /* Block - input */
 .input {
   height: 30px;
