--- a/src/less/style.less
+++ b/src/less/style.less
@@ -135,6 +135,11 @@ img {
 	opacity: 0;
 	z-index: -1;
 }
+
+.modal__success--opened {
+	opacity: 1;
+	z-index: 999;
+}
 /* Block - input */
 .input {
 	height: 30px;
