--- a/src/less/media.less
+++ b/src/less/media.less
@@ -283,6 +283,10 @@
 		width: 95vw;
 		padding: 40px 30px;
 	}
+	.page__scroll {
+		bottom: 55px;
+		right: 40px;
+	}
 }
 
 @media screen and (max-width: 320px) {
