Фиксированное позиционирование у шапки

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,7 @@ img {
 .page {
   position: relative;
   padding: 0;
+  padding-top: 59px;
   margin: 0;
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
@@ -169,6 +170,11 @@ img {
 }
 /* Block - header */
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
   line-height: 58px;
   font-stretch: expanded;
   background: #fff;
