--- a/src/less/style.less
+++ b/src/less/style.less
@@ -25,6 +25,7 @@ img {
 	position: relative;
 
 	padding: 0;
+	padding-top: 59px;
 	margin: 0;
 
 	font-family: "Roboto", Arial, sans-serif;
@@ -98,7 +99,6 @@ img {
 	padding: 80px 50px;
 
 	background-color: #fff;
-	// visibility: hidden;
 }
 
 .modal__close {
@@ -209,6 +209,13 @@ img {
 }
 /* Block - header */
 .header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	
+	z-index: 999;
+	
 	line-height: 58px;
 	font-stretch: expanded;
 	background: #fff;
