--- a/src/css/media.css
+++ b/src/css/media.css
@@ -190,6 +190,9 @@
   }
 }
 @media screen and (max-width: 480px) {
+  .page {
+    padding-top: 116px;
+  }
   .headline {
     font-size: 34px;
     line-height: 34px;
