--- a/src/less/media.less
+++ b/src/less/media.less
@@ -200,6 +200,9 @@
 }
 
 @media screen and (max-width: 480px) {
+	.page {
+		padding-top: 116px;
+	}
 	.headline {
 		font-size: 34px;
 		line-height: 34px;
