--- a/src/less/media.less
+++ b/src/less/media.less
@@ -1,4 +1,7 @@
 @media screen and (max-width: 1142px) {
+	.header {
+		width: 100vw;
+	}
 	.header__inner {
 		justify-content: space-between;
 	}
@@ -280,9 +283,13 @@
 	
 	.modal {
 		width: 100vw;
+		padding: 10px;
 		overflow-x: hidden;
+		overflow-y: auto;
 	}
 	.modal__form {
+		position: static;
+		transform: translate(0, 0);
 		width: 95vw;
 		padding: 40px 30px;
 	}
