--- a/src/less/media.less
+++ b/src/less/media.less
@@ -203,8 +203,8 @@
 }
 
 @media screen and (max-width: 480px) {
-	.page {
-		padding-top: 116px;
+	.btn--header {
+		display: none;
 	}
 	.headline {
 		font-size: 34px;
@@ -284,14 +284,20 @@
 	.modal {
 		width: 100vw;
 		padding: 10px;
+
 		overflow-x: hidden;
 		overflow-y: auto;
 	}
 	.modal__form {
 		position: static;
 		transform: translate(0, 0);
+
 		width: 95vw;
 		padding: 40px 30px;
+	}
+
+	.modal__success {
+		width: 90%;
 	}
 	.page__scroll {
 		bottom: 55px;
