--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,7 @@ img {
   font-size: 16px;
   line-height: 1.625;
   color: #000;
+  opacity: .99;
   background-color: #eee;
 }
 .page__scroll {
@@ -147,6 +148,9 @@ img {
   height: 60px;
   font-size: 14px;
   background-color: #d1d1d1;
+  -webkit-transition: all 200ms;
+  -o-transition: all 200ms;
+  transition: all 200ms;
 }
 .btn--main-screen {
   height: 62px;
@@ -171,9 +175,20 @@ img {
   left: 0;
   right: 0;
   z-index: 999;
+  height: 60px;
   line-height: 58px;
   font-stretch: expanded;
   background: #fff;
+  -webkit-transition: all 200ms;
+  -o-transition: all 200ms;
+  transition: all 200ms;
+}
+.header--less {
+  height: 50px;
+  line-height: 50px;
+}
+.header--less .btn--header {
+  height: 50px;
 }
 .header__inner {
   display: -webkit-box;
@@ -224,7 +239,7 @@ img {
 }
 .menu__mobile {
   display: none;
-  height: 35px;
+  height: 42px;
   width: 40px;
   background-color: transparent;
   background: url(../img/icon_menu.svg) no-repeat;
