--- a/src/less/media.less
+++ b/src/less/media.less
@@ -116,6 +116,10 @@
 		flex-basis: 100%;
 		width: 100%;
 	}
+
+	.projects__example {
+		width: 49%;
+	}
 }
 
 @media screen and (max-width: 826px) {
@@ -129,6 +133,10 @@
 	.projects__header {
 		width: 80%;
 	}
+	
+	.projects__examples {
+		text-align: center;
+	}
 
 	.projects__example {
 		width: 80%;
@@ -136,7 +144,7 @@
 
 	.projects__slider,
 	.projects__pict {
-		height: 400px;
+		height: 300px;
 	}
 
 	
