--- a/src/less/style.less
+++ b/src/less/style.less
@@ -506,15 +506,13 @@ img {
 	margin-bottom: 32px;
 }
 
-.projects__examples {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
-}
 
 .projects__example {
 	position: relative;
-	width: 421px;
+	
+	display: inline-block;
+	vertical-align: top;
+	width: 33%;
 	margin-top: 12px;
 }
 
