--- a/src/less/style.less
+++ b/src/less/style.less
@@ -668,10 +668,9 @@ img {
 
 .price__item {
 	position: relative;
-
-	flex: 1;
-	flex-basis: calc(33% - 5px);
-	width: calc(33% - 5px);	
+	
+	flex-basis: calc(33.3333%);
+	width: calc(33.3333%);	
 	height: 187px;
 	padding-top: 60px;
 	padding-left: 70px;
