--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1210,6 +1210,14 @@ img {
 	display: inline-block;
 	vertical-align: middle;
 	margin-right: 10px;
+
+	border: 1px solid transparent;
+
+	transition: all 400ms;
+}
+
+.g-recaptcha--error {
+	border: 1px solid red;
 }
 
 
